# lula-stickie-dumper

./: Cargo.toml
src/: main.rs  rtftotext.rs
